...
        android:id="@+id/profile_pic"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_txt"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />
...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/total_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/total_points_txt"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_codes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_codes_txt"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/top_code_score"
            app:layout_constraintStart_toEndOf="@+id/total_points"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/top_code_score"
            android:layout_width="wrap_content"
...
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/order_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/order_spinner_desc"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sort_lbl"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridView
        android:id="@+id/code_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="4"
        android:verticalSpacing="10dp" />

</LinearLayout>
