<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="15dp"
    card_view:cardElevation="0dp">

    <ImageView
        android:id="@+id/visual_representation"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/visual_representation_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="8dp"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="1.6"
        android:text="@string/score_txt"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />
</androidx.cardview.widget.CardView>